--- a/style.css
+++ b/style.css
@@ -557,8 +557,8 @@ body.nav-active {
 }
 
 .grid-list-offer {
-  display: flex;
-  flex-direction: column;
+  display: grid;
+
   justify-content: center;
   text-align: center;
   margin-inline: 50px;
@@ -748,9 +748,9 @@ body.nav-active {
   gap: 4rem; */
   align-items: center;
   grid-template-columns: repeat(2, 1fr);
-  padding: 10px;
+  padding: 60px 50px 50px 50px;
 
-  /* padding: 60px 50px 50px 50px;
+  /* 
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); */
 }
 .client_logo {
@@ -1049,4 +1049,240 @@ body.nav-active {
   color: #ffffff;
   padding-inline: 24px;
   font-weight: var(--fw-700);
+}
+
+/*=========== #MEDIA QUERIES ==============*/
+
+/* responsive for large than 575px screen  */
+@media (min-width: 575px) {
+  /* Reused style */
+  .container {
+    max-width: 100%;
+    width: 100%;
+    margin-inline: auto;
+  }
+  /* project */
+  .project-card .card-content {
+    padding: 40px;
+  }
+  .grid-list-offer {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .all_offer_content_wrapper .grid-list {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .work_button_part .grid-list {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+/* responsive for large than 768px screen  */
+@media (min-width: 768px) {
+  /* custom property */
+  :root {
+    /* spacing */
+    --section-padding: 120px;
+  }
+  /* reused style */
+  .container {
+    max-width: 720px;
+  }
+  .grid-list {
+    grid-template-columns: 1fr 1fr;
+  }
+  /* header */
+  .header .btn {
+    display: block;
+    margin-inline-start: auto;
+    padding: 8px 20px;
+  }
+  .header.active .btn {
+    background-color: #7d84ff;
+    border-color: #7d84ff;
+    color: #ffffff;
+  }
+  /* hero */
+  .hero-content {
+    max-width: 85%;
+    margin-inline: auto;
+  }
+  .hero-text {
+    --fs-5: 2rem;
+  }
+  /* service */
+  .service .section-title {
+    max-width: 30ch;
+    margin-inline: auto;
+  }
+  /* about */
+  .about .container {
+    grid-template-columns: 1fr 0.7fr;
+    align-items: center;
+  }
+  /* feature */
+  .feature .container {
+    grid-template-columns: 0.7fr 1fr;
+    align-items: center;
+  }
+  .feature-banner {
+    order: 1;
+  }
+  .clients_box_wrapper .grid-list {
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  .all_offer_content_wrapper .grid-list {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+/* responsive for large than 992px screen  */
+@media (min-width: 992px) {
+  /* reused style */
+  .container {
+    max-width: 960px;
+  }
+  /* header */
+  .nav-open-btn,
+  .navbar > *:not(.navbar-list),
+  .overlay {
+    display: none;
+  }
+
+  .navbar,
+  .navbar.active {
+    all: unset;
+    display: block;
+    margin-inline: auto 24px;
+  }
+  .navbar-list {
+    display: flex;
+    gap: 30px;
+  }
+  .navbar-link {
+    color: #ffffff;
+    transition: var(--transition-1);
+  }
+  .navbar-link:is(:hover, :focus-visible) {
+    opacity: 0.7;
+  }
+
+  .header.active .navbar-link {
+    color: #37414f;
+  }
+  .header.active .navbar-link:is(:hover, :focus-visible) {
+    opacity: 1;
+    color: #7d84ff;
+  }
+  .header .btn {
+    margin-inline-start: 0;
+  }
+  /* hero */
+  .hero {
+    padding-block-start: calc(var(--section-padding) + 50px);
+    text-align: left;
+  }
+  .hero .container {
+    grid-template-columns: 1fr 0.8fr;
+    align-items: center;
+  }
+
+  .hero-content {
+    max-width: unset;
+    margin-inline: 0;
+  }
+  .btn-wrapper {
+    justify-content: flex-start;
+  }
+  /* .about-card{
+    grid-template-columns: repeat(3, 1fr);
+
+  } */
+  /* stats */
+  .stats-card {
+    grid-template-columns: repeat(4, 1fr);
+  }
+
+  /* Project */
+  .project .section-title {
+    max-width: 32ch;
+    margin-inline: auto;
+  }
+  /* cta */
+  .cta .container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .cta .btn {
+    min-width: max-content;
+  }
+  .cta .section-title {
+    max-width: 30ch;
+    margin-block-end: 0;
+  }
+  /* footer */
+  .footer .grid-list {
+    grid-template-columns: repeat(4, 1fr);
+  }
+  .clients_box_wrapper .grid-list {
+    grid-template-columns: repeat(4, 1fr);
+  }
+  .work_button_part .grid-list {
+    grid-template-columns: repeat(3, 1fr);
+  }
+  .work_des_wrapper .grid-list {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+/* responsive for large than 1200px screen  */
+@media (min-width: 1200px) {
+  /* reused style */
+  .container {
+    max-width: 1140px;
+  }
+  /* hero */
+  .hero-text {
+    padding-inline-end: 100px;
+  }
+  .grid-list-offer {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    margin-inline: 50px;
+    gap: 30px;
+  }
+
+  /* service */
+  .service .grid-list {
+    grid-template-columns: repeat(3, 1fr);
+  }
+  /* stats */
+  .stats .container {
+    max-width: 70%;
+  }
+  .stats-card {
+    padding: 60px;
+  }
+  /* project */
+  .project .grid-list {
+    grid-template-columns: repeat(3, 1fr);
+  }
+  /* footer */
+  address.footer-text {
+    padding-inline-end: 100px;
+    margin-block-end: 16px;
+  }
+}
+
+/* responsive for large than 1400px screen  */
+@media (min-width: 1400px) {
+  /* reused style */
+  .container {
+    max-width: 1320px;
+  }
+  /* feature */
+  .feature-list {
+    grid-template-columns: 1fr 1fr;
+  }
 }
